--- a/EC01_LC_MNIST.ipynb
+++ b/EC01_LC_MNIST.ipynb
@@ -5249,7 +5249,7 @@
    },
    "source": [
     "Resposta: <br><br>\n",
-    "O melhor valor para o hiperparâmetro (c) na Parte 1 é definido através de uma busca em um grid de valores previamente definidos (de 2⁻¹⁰ até 2¹⁹) utilizando o dataset dividido em train-validation-test sets. É uma estratégia simples e eficaz, entretanto tem suas limitações como: <br>\n",
+    "O melhor valor para o hiperparâmetro (c) na Parte 1 é definido através de uma busca em um grid de valores previamente definidos (de 2⁻¹⁰ até 2¹⁸) utilizando o dataset dividido em train-validation-test sets. É uma estratégia simples e eficaz, entretanto tem suas limitações como: <br>\n",
     "- datasets pequenos não são adequados, pois reduzem a quantidade de dados que poderiam ser utilizados no treinamento ao dividir o conjunto de dados em 3 partes;\n",
     "- fica-se sujeito a algum eventual viés que a própria divisão dos dados possa causar - treinar, validar e testar com uma parte específica do dataset pode gerar resultados diferentes quando comparados com o mesmo processo executado com divisões distintas do mesmo dataset. \n",
     "\n",
@@ -8719,7 +8719,7 @@
     "\n",
     "* imagens mais complexas, pois possuem outras \"estruturas\" como galhos, mar, céu, objetos de uma mesma classe posicionados de diferentes formas, etc.<br>\n",
     "\n",
-    "Certamente, esse aumento de complexidade na matriz de pixels e grande variabilidade entre as imagens de uma mesma classe agregam grande dificuldade ao processo de classificação "
+    "Certamente, esse aumento de complexidade na matriz de pixels e grande variabilidade entre as imagens de uma mesma classe agregam grande dificuldade ao processo de classificação."
    ]
   }
  ],
