--- a/EA072_EC08_PLN_LSTM.ipynb
+++ b/EA072_EC08_PLN_LSTM.ipynb
@@ -23,6 +23,9 @@
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from random import seed\n",
     "from random import randint\n",
     "from numpy import array\n",
